# Chess

./: .gitignore  Bitboard.cpp  Bitboard.h  Board.cpp  Board.h  CMakeLists.txt  ChessFrame.cpp  ChessFrame.h  Piece.cpp  Piece.h  README.md  Representation.cpp  Representation.h  constants.h  main.cpp  main.h  test.cpp  types.h
engine/: Attack.cpp  Attack.h  AttackGen.cpp  Board.cpp  Board.h  CMakeLists.txt  Position.cpp  Position.h
src/: CMakeLists.txt  draft.cpp  main.cpp  types.h
src/engine/: Attack.cpp  AttackGen.cpp  Board.cpp  Board.h  CMakeLists.txt  Position.cpp  Position.h  Search.cpp  Search.h  TTable.cpp  TTable.h
src/ui/: CMakeLists.txt  Canvas.cpp  Frame.h  Symbol.cpp
test/: CMakeLists.txt  MoveGenerationTest.cpp
ui/: App.cpp  App.h  CMakeLists.txt  Canvas.cpp  Canvas.h  Frame.cpp  Piece.cpp  Piece.h  Symbol.cpp  Symbol.h
